deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matecloud
  labels:
    name: matecloud
    app.kubernetes.io/part-of: matecloud
